# abc-uiautomation

./: Cargo.toml
.github/: dependabot.yml
src/: accounts_receivable.rs  customer_file.rs  inventory.rs  lib.rs  reports.rs
