[package]
name = "abc-uiautomation"
version = "1.4.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3"
chrono = "0.4"
uiautomation = "0.7"
gtin = { git = "https://github.com/areif-dev/gtin", version = "1.0.0" }
bigdecimal = "0.4.10"
